# card-monitor

./: .env.example  .gitignore  CLAUDE.md  config.py  main.py  pyproject.toml  requirements.txt  깃허브_자동화_안내.md  서버_실행.bat  설치.bat  자동수집_등록.bat  자동수집_해제.bat  자동화_안내.md  카드수집_실행.bat
.github/workflows/: monitor.yml
data/: http.py  models.py
data/scrapers/: __init__.py  bccard.py  hana.py  hyundai.py  kb.py  lotte.py  samsung.py  shinhan.py  woori.py
services/: collector.py  notifier.py
storage/: cards.db  db.py
tests/: test_collector_new.py  test_db.py  test_hana_parser.py  test_hyundai_parser.py  test_kb_parser.py  test_lotte_notices.py  test_lotte_parser.py  test_notifier.py  test_samsung_parser.py  test_shinhan_parser.py  test_woori_parser.py
web/: app.py  static_export.py
web/routers/: dashboard.py
web/templates/: base.html  list.html
